<resources>
    <string name="app_name">StudentsApp</string>
    <string name="alert_no_internet_connection">Ups! Se pare ca nu aveti conexiune la internet!</string>
    <string name="login_username">Nume de utilizator</string>
    <string name="login_password">Parola</string>
    <string name="login_forgotten_password">Ati uitat numele de utilizator sau parola?</string>
    <string name="login_autentificare">Autentificare</string>
    <string name="conturi_acces">Conturi acces 2018-2019</string>
    <string name="welcome_title">Bine ati venit pe aplicatia de cursuri a Facultatii de Automatica si Calculatoare</string>
    <string name="acces_email">Acces email</string>
    <string name="welcome_access_email_1">Fiecare student are un cont de e-mail asociat pe care va trebui sa il foloseasca in comunicarea universitara. E-mail-ul este de forma user_curs@stud.acs.upb.ro si poate fi accesat de la adresa </string>
    <string name="welcome_access_email_2">http://outlook.com/upb.ro</string>
    <string name="welcome_access_email_3">. Pentru a se activa contul de e-mail, trebuie sa schimbati parola folosind platforma de cursuri. Parola va fi aceeasi cu cea a platformei, dupa ce ati schimbat-o. Activarea se va realiza in aproximativ 3 ore dupa schimbarea parolei. Parola NU trebuie sa contina numele sau prenumele dumneavoastra.</string>
    <string name="software_gratuit">Software gratuit</string>
    <string name="welcome_software_gratuit_1">Puteti descarca in mod gratuit produse Microsoft (exceptand suita Microsoft Office) accesand adresa </string>
    <string name="welcome_software_gratuit_2">http://msdnaa.pub.ro</string>
    <string name="welcome_software_gratuit_3"> si folosind ca date de autentificare adresa de e-mail din partea UPB si parola asociata acestuia.</string>
    <string name="welcome_validare_autentificare">Nu sunteti autentificat</string>
    <string name="alert_error_occured">Eroare</string>
    <string name="alert_title">Alerta</string>
    <string name="date_autentificare">Date autentificare</string>
    <string name="resetare_parola">Resetare parola</string>
    <string name="welcome_conturi_access_1">Pentru a afla user-ul de acces la aceasta platforma accesati pagina "Acces site cursuri" de pe platforma </string>
    <string name="welcome_conturi_access_2">http://studenti.pub.ro</string>
    <string name="welcome_conturi_access_3">. Parola initiala pentru anul 1 este student + ultimele 6 cifre din CNP sau pasaport. Va rugam schimbati parola dupa prima autentificare.</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="profile">Profil</string>
    <string name="settings">Setari</string>
    <string name="notifications">Notificari</string>
    <string name="messenger">Messenger</string>
    <string name="back_click">Dublu click pentru a inchide aplicatia</string>
    <string name="courses">Cursuri</string>
    <string name="news">Stiri</string>
    <string name="discussions">Discutii</string>
    <string name="schedule">Orar</string>
    <string name="deadlines">Termene limita</string>
    <string name="details">Detalii</string>
    <string name="email">E-mail</string>
    <string name="country">Tara</string>
    <string name="city">Oras</string>
    <string name="year">Anul universitar</string>
    <string name="faculty">Facultatea</string>
    <string name="cycle_of_study">Ciclul de studii</string>
    <string name="specialization">Specializarea</string>
    <string name="year_of_study">Anul de studiu</string>
    <string name="group">Grupa</string>
    <string name="change_password">Schimbati parola</string>
    <string name="hint_change_password">Parola trebuie să conţină cel puţin 8 caractere, cel puţin 1 cifre, cel puţin 1 litere mici, cel puţin 1 majuscule, cel puţin 1 caractere non-alfanumerice</string>
    <string name="current_password">Parola curenta</string>
    <string name="new_password">Noua parola</string>
    <string name="confirm_password">Confirmati noua parola</string>
    <string name="logout_everywhere">Delogare de pe toate device-urile</string>
    <string name="cancel">Anulare</string>
    <string name="an_universitar">An Universitar</string>
    <string name="facultatea">Facultatea</string>
    <string name="ciclu_de_studii">Ciclu de studii</string>
    <string name="specializarea">Specializarea</string>
    <string name="an">Anul</string>
    <string name="grupa">Grupa</string>
    <string name="logout_question">Sunteti sigur ca vreti sa va delogati?</string>
    <string name="course_details">Detailii Curs</string>
    <string name="no_upcoming_deadlines">Nu sunt deadline-uri in viitorul apropiat! :)</string>
    <string name="element_name_hint">Inserati numele elementului</string>
    <string name="save">Salvati</string>
    <string name="room_hint">Inserati numele salii</string>
    <string name="time_hint">Inserati ora</string>
    <string name="add_element">Adaugati element</string>
    <string name="something_wrong">Ceva a mers prost! Incerrcati mai tarziu :)</string>
    <string name="events">evenimente</string>
    <string name="no_files">Nu sunt fisiere atasate acestui modul.</string>
    <string name="help">Ajutor</string>
    <string name="campus_map">Harta campus</string>
    <string name="schedules">Orare</string>
    <string name="links">Linkuri utile</string>
    <string name="upb_link">Site-ul UPB</string>
    <string name="acs_link">Site-ul ACS</string>
    <string name="facebook_upb">Pagina de Facebook UPB</string>
    <string name="facebook_acs">Pagina de Facebook ACS</string>
    <string name="facebook_lsac">Pagina de Facebook LSAC</string>
    <string name="studenti_link">Site studenti</string>
    <string name="no_courses">Nu sunt cursuri in desfasurare :)</string>
    <string name="no_forums">Nu exista formuri pentru acest curs.</string>
    <string name="no_discussions">Nu exista discutii pentru acest forum.</string>
    <string name="no_posts">Nu exista postari pentru aceasta discutie.</string>
    <string name="post_hint">Adaugati un raspuns</string>
    <string name="add_discussion">Adauga discutie</string>
    <string name="subject">Subiect</string>
    <string name="message">Mesaj</string>
    <string name="send">Trimiteti</string>
    <string name="empty_fiels">Completati toate campurile</string>
    <string name="forums">Forumuri</string>
    <string name="assignments">Teme incarcate</string>
    <string name="storage_error_not_available">Memorie indisponibila</string>
    <string name="storage_file_error">Ceva nu a functionat cum trebuie in citirea fisierului.</string>
    <string name="storage_error_low_memory">Memorie insuficienta</string>
    <string name="download_success">Fisier descarcat. Doriti sa deschideti fisierul?</string>
    <string name="info_chooser_open_file">Alegeti o aplicatie pentru a deschide</string>
    <string name="permission_denied">Permisiune de descarcare refuzata.</string>
</resources>
