<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_campus_map"
            style="@style/TextStyle16BlueDarkerBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/campus_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_campus_map"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:src="@drawable/poli"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_campus_map" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_schedules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:paddingTop="@dimen/padding_8"
            android:paddingBottom="@dimen/padding_8"
            android:background="@drawable/shape_blue_rounded_empty_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_campus_map">

            <TextView
                style="@style/TextStyle16BlueDarkerBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedules"
                android:paddingStart="@dimen/padding_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linear_details"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_10"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextStyleDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_right" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/text_links"
            style="@style/TextStyle16BlueDarkerBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/links"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_schedules" />

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:elevation="5dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_links"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_white_gradient_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_upb_link"
                    style="@style/TextStyle14BlueDarker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8"
                    android:text="@string/upb_link" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/blue_lighter_two" />

                <TextView
                    android:id="@+id/text_acs_link"
                    style="@style/TextStyle14BlueDarker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_8"
                    android:text="@string/acs_link" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/blue_lighter_two" />

                <TextView
                    android:id="@+id/text_upb_facebook"
                    style="@style/TextStyle14BlueDarker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8"
                    android:text="@string/facebook_upb" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/blue_lighter_two" />

                <TextView
                    android:id="@+id/text_acs_facebook"
                    style="@style/TextStyle14BlueDarker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8"
                    android:text="@string/facebook_acs" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/blue_lighter_two" />

                <TextView
                    android:id="@+id/text_lsac_facebook"
                    style="@style/TextStyle14BlueDarker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8"
                    android:text="@string/facebook_lsac" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/blue_lighter_two" />

                <TextView
                    android:id="@+id/text_studenti_link"
                    style="@style/TextStyle14BlueDarker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8"
                    android:text="@string/studenti_link" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>