<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_16"
    android:layout_marginTop="@dimen/margin_4"
    android:layout_marginEnd="@dimen/margin_16"
    android:layout_marginBottom="@dimen/margin_4"
    android:elevation="5dp"
    app:cardCornerRadius="15dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_grey_gradient_background">

        <EditText
            android:id="@+id/edit_text_element_name"
            style="@style/TextEditInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:hint="@string/element_name_hint"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@id/spinner_element_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_element_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_text_element_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_room"
            style="@style/TextEditInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:hint="@string/room_hint"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@id/edit_text_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_element_name" />

        <EditText
            android:id="@+id/edit_text_time"
            style="@style/TextEditInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="@dimen/margin_8"
            android:hint="@string/time_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_text_room"
            app:layout_constraintTop_toBottomOf="@id/spinner_element_type" />

        <Spinner
            android:id="@+id/spinner_recurrence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_room" />

        <Button
            android:id="@+id/button_save_element"
            style="@style/ButtonLoginStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_recurrence" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/ButtonEmptyCenterStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_save_element"
            app:layout_constraintTop_toBottomOf="@id/spinner_recurrence" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>