<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_change_password"
            style="@style/TextStyleSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_change_hint"
            style="@style/TextStyleText14BlueLighter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/hint_change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_change_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_current_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/shape_rounded_corners_empty_center_blue"
            android:focusableInTouchMode="true"
            android:hint="@string/current_password"
            android:textColorHint="@color/blue_lighter_dark"
            app:hintTextAppearance="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_change_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_current_password"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_3"
                android:layout_marginTop="@dimen/margin_3"
                android:layout_marginEnd="@dimen/margin_3"
                android:layout_marginBottom="@dimen/margin_3"
                android:background="@null"
                android:inputType="textPassword"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/shape_rounded_corners_empty_center_blue"
            android:hint="@string/new_password"
            android:textColorHint="@color/blue_lighter_dark"
            app:hintTextAppearance="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_current_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_new_password"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_3"
                android:layout_marginTop="@dimen/margin_3"
                android:layout_marginEnd="@dimen/margin_3"
                android:layout_marginBottom="@dimen/margin_3"
                android:background="@null"
                android:inputType="textPassword"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/shape_rounded_corners_empty_center_blue"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/blue_lighter_dark"
            app:hintTextAppearance="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_new_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_confirm_password"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_3"
                android:layout_marginTop="@dimen/margin_3"
                android:layout_marginEnd="@dimen/margin_3"
                android:layout_marginBottom="@dimen/margin_3"
                android:background="@null"
                android:inputType="textPassword"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear_check_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_confirm_password">

            <CheckBox
                android:id="@+id/checkbox_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextStyleText14BlueLighter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_everywhere" />

        </LinearLayout>

        <Button
            android:id="@+id/button_change"
            style="@style/ButtonLoginStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_check_logout" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/ButtonEmptyCenterStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_change" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>