<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/shape_rounded_corners_empty_center_blue"
        android:focusableInTouchMode="true"
        android:hint="@string/subject"
        android:textColorHint="@color/blue_lighter_dark"
        app:hintTextAppearance="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline6">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_subject"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginEnd="@dimen/margin_3"
            android:layout_marginBottom="@dimen/margin_3"
            android:background="@null"
            android:inputType="text"
            android:lines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/shape_rounded_corners_empty_center_blue"
        android:hint="@string/message"
        android:textColorHint="@color/blue_lighter_dark"
        app:hintTextAppearance="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_subject">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_message"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginEnd="@dimen/margin_3"
            android:layout_marginBottom="@dimen/margin_3"
            android:background="@null"
            android:imeOptions="actionDone"
            android:inputType="text|textMultiLine"
            android:lines="7"
             />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_send"
        style="@style/ButtonLoginStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_message" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/ButtonEmptyCenterStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_send"
        app:layout_constraintTop_toBottomOf="@id/text_message" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</android.support.constraint.ConstraintLayout>